package com.example.coaapp.controller;

public interface Command {
    void execute();
}